Bug #23891 --> remove some extra locks in IsImapThreadRunning which are unnecessary. This helps relieve a contention problem in this bug. r=bienvenu